libs/@local/hashql/mir/tests/ui/reify/external-module.jsonc
//@ run: fail
//@ description: External module invocation reification
["::graph::tmp::decision_time_now"]
//~^ ERROR external modules are not supported
